--- a/client/main.css
+++ b/client/main.css
@@ -2,12 +2,12 @@
   Global CSS file
 */
 *{
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	line-height: normal;
+	/*margin: 0;*/
+	/*padding: 0;*/
+	/*-webkit-box-sizing: border-box;*/
+	/*-moz-box-sizing: border-box;*/
+	/*box-sizing: border-box;*/
+	/*line-height: normal;*/
 }
 
 ::-webkit-input-placeholder {
@@ -29,6 +29,9 @@ input:-moz-placeholder {
 
 body {
 	background: #FFF;
-	font-family: 'Lato', sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 }
