--- a/client/modules/App/App.css
+++ b/client/modules/App/App.css
@@ -1,7 +1,7 @@
 .container {
   max-width: 980px;
   width: 100%;
-  padding: 15px;
+  padding: 20px;
   margin: 0 auto;
 }
 
@@ -23,6 +23,7 @@
   transition: padding-left 218ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-right: 20px !important;
   padding-top: 64px !important;
+  margin: 0 20px 20px 20px;
 }
 
 .appBar.expanded {
