--- a/client/modules/App/App.css
+++ b/client/modules/App/App.css
@@ -3,6 +3,13 @@
   width: 100%;
   padding: 20px;
   margin: 0 auto;
+  display: flex;
+  justify-content: flex-start;
+  flex: 1 0 0;
+}
+
+.item {
+  justify-content: center;
 }
 
 .appBar {
